[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
rayon = "1.5.2"
mp3-duration = { version = "0.1.10", optional =  true }
metaflac = { version = "0.2.5", optional = true }
mp4ameta = { version = "0.11.0", optional = true }
lazy_static = "1.4.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
uuid = { version = "1.0.0", features = ["v4", "fast-rng"] }
indicatif = { version = "0.16.2", features = ["rayon"] }
term_size = "0.3.2"

[features]
mp3 = ["dep:mp3-duration"]
flac = ["dep:metaflac"]
m4a = ["dep:mp4ameta"]
default = ["mp3", "flac", "m4a"]
